# specter

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/specter/: __init__.py  agent.py  browser.py  memory.py  server.py
backend/tests/: conftest.py  test_memory.py  test_server.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/memory/: route.ts
frontend/components/: ChatPanel.tsx  InputBar.tsx  MemoryPanel.tsx  MessageBubble.tsx  MessageList.tsx  SuccessCriteria.tsx
frontend/lib/: types.ts
